# eddi-scheduler

./: .env.example  .gitignore  .secrets.example  LICENSE  QUICK_REFERENCE.md  README.md  SCHEDULER.md  TESTING.md  USAGE_GUIDE.md  pyproject.toml  test_workflow.sh
.github/workflows/: eddi-scheduler.yml
scripts/: eddi_control.py
src/eddi_scheduler/: __init__.py  cli.py  client.py
tests/: __init__.py  test_client.py
